minio/01-minio-ns_sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    app.kubernetes.io/component: minio
    app.kubernetes.io/part-of: storage
    istio-injection: enabled
