minio/04-minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
  labels:
    app: minio
    app.kubernetes.io/component: minio
    app.kubernetes.io/part-of: storage
spec:
  selector:
    app: minio
  #clusterIP: None
  ports:
  - name: http-minio
    port: 9000
    targetPort: 9000
  - name: tcp-minio
    port: 9001
    targetPort: 9001
---
