minio/06-minio-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: minio-gw
  namespace: minio
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      name: http-minio
      number: 80
      protocol: HTTP
    hosts:
    - "minio.app.example.id"
  - port:
      name: https-minio
      number: 443
      protocol: HTTPS
    tls:
      credentialName: minio-tls
      mode: SIMPLE
    hosts:
    - "minio.app.example.id"
  - port:
      name: tcp-minio
      number: 9001
      protocol: TCP
    hosts:
    - "minio.app.example.id"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio
  namespace: minio
spec:
  hosts:
  - "minio.app.example.id"
  gateways:
  - minio-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: minio.minio.svc.cluster.local
        port:
          number: 9000
  tcp:
  - match:
    - port: 9001
    route:
    - destination:
        host: minio.minio.svc.cluster.local
        port:
          number: 9001
---
